--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - box</title>
+  <title>楓之谷工具</title>
   
 
 </head>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <h2 align=center style="font-size:60px;">清流專用</h2>
+  <h2 align=center style="font-size:60px;">清流 專用</h2>
   <hr>
   <a href="javascript:Ignore1()" style="font-size:40px;">1.無視 - BOSS防禦計算</br>
     <a href="javascript:Ignore2()" style="font-size:40px;">2.複合無視計算</br>
