--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
   <h2 align=center style="font-size:60px;">清流 專用</h2>
   <hr>
-  <a href="javascript:Ignore1()" style="font-size:40px;">1.無視 - BOSS防禦計算</br>
-    <a href="javascript:Ignore2()" style="font-size:40px;">2.複合無視計算</br>
-      <a href="javascript:scroll()" style="font-size:40px;">3.卷軸計算</br>
+  <a href="javascript:Ignore1()" style="font-size:40px;">1.無視對於BOSS防禦實際傷害計算</br>
+    <a href="javascript:Ignore2()" style="font-size:40px;">2.複合無視防禦計算</br>
+      <a href="javascript:scroll()" style="font-size:40px;">3.200等武器卷軸計算</br>
         <a href="javascript:Powercalculate()" style="font-size:40px;">4.戰地戰力計算</br>
 
           <hr>
