--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <a href="javascript:Ignore1()" style="font-size:40px;">1. 無視對於BOSS防禦實際傷害計算</br>
     <a href="javascript:Ignore2()" style="font-size:40px;">2. 複合無視防禦計算</br>
       <a href="javascript:scroll()" style="font-size:40px;">3. 200等武器卷軸計算</br>
-        <a href="javascript:Powercalculate()" style="font-size:40px;">4. 戰地戰力計算</br>
+         <a href="javascript:scroll_160()" style="font-size:40px;">4. 160等武器卷軸計算</br>
+            <a href="javascript:Powercalculate()" style="font-size:40px;">5. 戰地戰力計算</br>
 
           <hr>
 </body>
